Fix alignment problem in hero section

--- a/ScenicForestWebsite/sub.css
+++ b/ScenicForestWebsite/sub.css
@@ -65,5 +65,6 @@ ul.featured-cabins {
   }
 
   .sub-desc {
+    width: 100%;
   }
 }
